# cicd-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/calc/: __init__.py
tests/: test_calc.py
