[project]
name = "calc"
version = "0.1.0"
description = "CICD 学习 demo：一个简单计算器"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/calc"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
